# protobuf-decompiler

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  BinaryMetadataExtractor.cpp  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FilesystemMetadataExtractor.cpp  LICENSE.md  MetadataExtractor.cpp  README.md  main.cpp
.github/ISSUE_TEMPLATE/: binary_support.yml  bug_report.yml
.github/workflows/: build.yml
cmake-build/protobuf-2.6.1-cmake/: CMakeLists.txt  README.md  config.h.in
cmake-build/protobuf-2.6.1-cmake/patches/: add-va-copy-fix.patch  fix-va-copy.patch
cmake-build/protobuf-2.6.1-cmake/src/: CMakeLists.txt  va_copy_fix.h
